Feature/multi chart (#11)
* chore: optimize AppConfig initialization

* doc: add implementation document for multi-chart

* fix: happy checkstyle

* chore: review colours to be used (very important stuff to tinker with at an early stage)

* chore: clean code quick wins

* chore: unused import

* feat: extracted color configuration to properties, need to investigate why JavaFX is not applying them

* Add comprehensive tests for color configuration and fix CPU clock colors parsing

* feat: improve scene layout and increase default size

* feat: remove dead code for setting style, it won't work to set style AFTER node is added to scene

* feat: add configurable tick in seconds and series length

---------

Co-authored-by: lcappuccio <9638971+lcappuccio@users.noreply.github.com>