@@ -7,7 +7,6 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.lcappuccio.systemmonitor.config.AppConfig;
 import org.lcappuccio.systemmonitor.model.FileSystemMetrics;
 import org.slf4j.Logger;
@@ -20,12 +19,10 @@ public class FileSystemCollector implements Collector<FileSystemMetrics> {
 
   private static final Logger LOG = LoggerFactory.getLogger(FileSystemCollector.class);
 
-  private final AppConfig config;
   private final List<String> mountPoints;
   private CollectorStatus status = CollectorStatus.UNAVAILABLE;
 
   public FileSystemCollector(AppConfig config) {
-    this.config = config;
     this.mountPoints = config.getFsMountpoints();
   }
 
@@ -33,7 +30,7 @@ public class FileSystemCollector implements Collector<FileSystemMetrics> {
   public void initialize() {
     List<String> validMounts = mountPoints.stream()
         .filter(this::isMountValid)
-        .collect(Collectors.toList());
+        .toList();
 
     if (validMounts.isEmpty()) {
       status = CollectorStatus.UNAVAILABLE;
